AKS-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /frontendservice/
        pathType: Prefix
        backend:
          service: 
           name: frontendservice
           port:
              number: 5000     
      - path:  /backendservice/
        pathType: Prefix
        backend:
          service: 
           name: backendservice
           port:
              number: 5001
